--- a/templates/logout.html
+++ b/templates/logout.html
@@ -2,7 +2,7 @@
 
 {% block main_content %}
 
-<form method="post" action="{{url_for('logout', uid=uid)}}">
+<form method="post" action="{{url_for('logout')}}">
     <button type="submit">Logout</button>
 </form>
 
