--- a/templates/routeForm.html
+++ b/templates/routeForm.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Upload Details About Your Running Route</h1>
 
-<form method="post" action="{{url_for('upload_route', uid=uid)}}">
+<form method="post" action="{{url_for('upload_route')}}">
     <p>
         <label for="name">Route Name: </label>
         <input type="text" name="name" id="name" required>
