adressed merge issues! deleted my work though so redid it and added intro

--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -17,9 +17,9 @@
 </div>
 
 <div><img class="aboutPic" src="/static/placeholder.svg" alt="One of our awesome creators"> 
-    <h3>Maya Luheda</h3>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet tincidunt mi. Aenean vitae volutpat ex. 
-     Proin auctor velit sem, in bibendum arcu vestibulum ut. Curabitur leo odio, faucibus quis erat vel, consectetur accumsan nulla.</p> 
+    <h3>Maya Lu-Heda</h3>
+    <p> I'm Maya Lu-Heda and in the Green Class of 20205. I've been running throughout college and just ran my first Half Marathon. 
+     I'm excited to build this app and find new, exciting routes in the area!</p> 
 </div>
 
 <div><img class="aboutPic" src="/static/placeholder.svg" alt="One of our awesome creators"> 
