--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,10 +5,13 @@
 
 <h1>Your profile</h1>
 
-<p>Your username is {{username}}</p>
-<p>Your pronouns are {{pronouns}}</p>
-<p>Your level is {{level}}</p>
-<p>Your overall mileage is {{overallMileage}}</p>
-<p>Your average pace is {{averagePace}}</p>
-<p>The amount of routes you have created: {{routesCreated}}</p>
+<div class="profile-info">
+<p>username: {{username}}</p>
+<p>pronouns: {{pronouns}}</p>
+<p>current level: {{level}}</p>
+<p>current overall mileage: {{overallMileage}}</p>
+<p>current averrage pace: {{averagePace}}</p>
+<p>number of routes you have created: {{routesCreated}}</p>
+</div>
+
 {% endblock %}
