--- a/templates/profileFeed.html
+++ b/templates/profileFeed.html
@@ -35,6 +35,14 @@
         <p><b>Where?</b> {{route[13]}}</p>
         <p><b>Water Fountain?</b> {{route[14]}}</p>
         <p><b>Where?</b> {{route[15]}}</p>
+        <p><b>Ratings:</b></p>
+        <ul>
+            {% for rating in ratings %}
+                {% if rating[2] == route[0] %}
+                <li>Rating: {{ rating[3] }} | Comment: {{ rating[4] }}</li>
+                {% endif %}
+            {% endfor %}
+        </ul>
     </div>
     {% endfor %}
 </div>
