added embedded map link field to routeForm, changed from indexing queried items to using dictionary (in profileFeed and routeSearch), displayed map from embedded link in route entries on the search page

--- a/templates/routeForm.html
+++ b/templates/routeForm.html
@@ -23,8 +23,13 @@
     </p>
 
     <p>
-    <label for="route_tcx">Route TCX:</label>
-    <input type="file" id="route_tcx" name="route_tcx" accept=".tcx" required><br>
+        <label for="route_tcx">Route TCX:</label>
+        <input type="file" id="route_tcx" name="route_tcx" accept=".tcx" required><br>
+    </p>    
+
+    <p>
+        <label for="embedded_map_link">Embedded Map Link:</label>
+        <input type="text" id="embedded_map_link" name="embedded_map_link" required><br>
     </p>    
     
     <p>
