--- a/static/style.css
+++ b/static/style.css
@@ -273,6 +273,20 @@ nav ul {
     z-index: 1000;
 }
 
+.modal-iframe-container {
+  width: 100%;
+  overflow: hidden;
+  height: 300px;
+  position: relative;
+}
+
+.modal-iframe-container iframe {
+  width: 100%;
+  height: 600px;
+  border: 0;
+  margin-top: -150px;
+}
+
 /* Side pop-up content style */
 .filter-sidebar-content {
     color: white;
