--- a/templates/routeSearch.html
+++ b/templates/routeSearch.html
@@ -17,7 +17,7 @@
     <span class="close-btn" onclick="toggleFilter()">&times;</span>
 
     <form id="search-filters" method="post" action="{{ url_for('search_route') }}">     
-        <script> 
+        <script>
             function updateMileageValue(value) {
                 document.getElementById('mileageValue').textContent = value;
             }
@@ -50,10 +50,28 @@
                     if (event.target === modal) {
                         modal.style.display = "none";
             }
+            })};
+
+            const ratingStars = Array.from(document.getElementsByClassName("rating__star"));
+
+            function executeRating(stars) {
+            const starClassActive = "rating__star fas fa-star"; // Filled star
+            const starClassInactive = "rating__star far fa-star"; // Empty star
+
+            stars.forEach((star, index) => {
+                star.onclick = () => {
+                // Loop through all the stars
+                stars.forEach((s, i) => {
+                    // Change class based on whether the star index is <= clicked star's index
+                    s.className = i <= index ? starClassActive : starClassInactive;
+                });
+                };
             });
-};
-        </script>
-        
+            } 
+
+            executeRating(ratingStars);
+    </script>
+       
         <!-- Filter Section -->
         <div class="filter-section">
             <label>Route Name:</label>
@@ -173,6 +191,7 @@
             <p><b>Where?</b> {{route[13]}}</p>
             <p><b>Water Fountain?</b> {{route[14]}}</p>
             <p><b>Where?</b> {{route[15]}}</p>
+       
             <p><b>Ratings:</b></p>
             <ul>
                 {% for rating in ratings %}
@@ -189,6 +208,7 @@
                     {% endif %}
                 {% endfor %}
             </ul>
+            <iframe src="https://www.google.com/maps/d/embed?mid=14fqbXtz0HHPkbOnBfW0qfWp0lLP0m3g&ehbc=2E312F" width="560" height="400"></iframe>
         </div>
     </div>
     {% endfor %}
