--- a/templates/routeForm.html
+++ b/templates/routeForm.html
@@ -23,10 +23,15 @@
     </p>
 
     <p>
-    <label for="route_tcx">Route TCX:</label>
-    <input type="file" id="route_tcx" name="route_tcx" accept=".tcx" required><br>
+        <label for="route_tcx">Route TCX:</label>
+        <input type="file" id="route_tcx" name="route_tcx" accept=".tcx" required><br>
     </p>    
     
+    <p>
+        <label for="embedded_map_link">Embedded Map Link:</label>
+        <input type="text" id="embedded_map_link" name="embedded_map_link" required><br>
+    </p> 
+
     <p>
         <label for="distance">Distance in Miles (use decimal notation): </label>
         <input type="text" name="distance" id="distance" placeholder="Enter distance in miles" required 
