--- a/static/style.css
+++ b/static/style.css
@@ -25,6 +25,10 @@ h2, h3 {
     color: var(--color-header);
 }
 
+body.join-page {
+  background-color: #dae2dc;
+}
+
 /* NAV BAR */
 nav ul {
     list-style-type: none;
@@ -380,6 +384,21 @@ input[type="submit"], button[type="submit"] {
     background-color: #45a049;
   }
 
+  .styled-button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.styled-button:hover {
+    background-color: #45a049;
+}
+
   /*RATINGS*/
 
   .rating {
@@ -390,3 +409,71 @@ input[type="submit"], button[type="submit"] {
     cursor: pointer;
     color: #dabd18b2;
  }
+
+ /*LOGIN and SIGN UP*/
+
+ .center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  margin: 0;
+}
+
+/* Style the form */
+#joinform {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 30px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+  width: 400px;
+}
+
+/* Heading style */
+#joinform h2 {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333; 
+  margin-bottom: 20px;
+  text-align: center; 
+}
+
+/* Label styling */
+#joinform label {
+  display: block; 
+  font-size: 14px;
+  color: #555; 
+  font-weight: 600; 
+  width: 100%;            
+  margin-bottom: 5px;         
+}
+
+#joinform button {
+  align-self: center; 
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px;
+  text-transform: uppercase;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+#joinform button:hover {
+  background-color: #45a049;
+}
+
+.small-input {
+  width: 40%;
+}
+
+.back-to-login {
+  display: block;
+  margin-top: 15px;
+  text-align: center;
+}
