change to gpx format

--- a/templates/routeForm.html
+++ b/templates/routeForm.html
@@ -24,7 +24,7 @@
 
     <p>
         <label for="route_tcx">Route TCX:</label>
-        <input type="file" id="route_tcx" name="route_tcx" accept=".tcx" required><br>
+        <input type="file" id="route_tcx" name="route_tcx" accept=".gpx" required><br>
    
     </p>    
     
