updated about the creator page

--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -6,8 +6,10 @@
 <div class="about">
 <div><img class="aboutPic" src="/static/placeholder.svg" alt="One of our awesome creators"> 
        <h3>Nicole Sobski</h3>
-       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet tincidunt mi. Aenean vitae volutpat ex. 
-        Proin auctor velit sem, in bibendum arcu vestibulum ut. Curabitur leo odio, faucibus quis erat vel, consectetur accumsan nulla.</p> 
+       <p>I'm Nicole and I'm a senior majoring in Computer Science. Running has been a big part of my life; it's allowed
+        me to appreciate Wellesley's campus and explore new places in Boston. I'm hoping that this application
+        will allow runners to try out new routes!
+       </p> 
 </div>
 
 <div><img class="aboutPic" src="/static/placeholder.svg" alt="One of our awesome creators"> 
