--- a/templates/intro.html
+++ b/templates/intro.html
@@ -15,9 +15,9 @@
 </head>
 <body>
 
-<h1>Welcome to RouteScout!</h1>
+<h1 class="intro-center-container">Welcome to RouteScout!</h1>
 
-<form method=POST action="{{url_for('intro')}}">
+<form method=POST action="{{url_for('intro')}}" class="login">
     <input type="submit" name="submit" value="login">
     <input type="submit" name="submit" value="signup">
   </form>
