--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -18,7 +18,7 @@
      Proin auctor velit sem, in bibendum arcu vestibulum ut. Curabitur leo odio, faucibus quis erat vel, consectetur accumsan nulla.</p> 
 </div>
 
-<div><img class="aboutPic" src="/static/placeholder.svg" alt="One of our awesome creators"> 
+<div><img class="aboutPic" src="/static/IMG_3370.HEIC" alt="One of our awesome creators"> 
     <h3>Maya Lu-Heda</h3>
     <p> I'm Maya Lu-Heda and in the Green Class of 20205. I've been running throughout college and just ran my first Half Marathon. 
      I'm excited to build this app and find new, exciting routes in the area!</p> 
