--- a/templates/signup.html
+++ b/templates/signup.html
@@ -45,16 +45,18 @@
           <input type="text" name="pronouns" placeholder="pronouns/here" required>
       </label>
       
-      <label for="level">What's your running level?</label>
+      <label for="level">What's your running level?
       <select name="level" id="level">
           <option value="Beginner">Beginner</option>
           <option value="Intermediate">Intermediate</option>
           <option value="Advanced">Advanced</option>
       </select>
+      </label>
       
       <label>What is your current overall mileage? [number]
         <input type="number" name="overall_mileage" placeholder="number of miles" required min="0" step="1">
-      
+      </label>
+
       <label>What is your current average pace?
           <input type="text" name="average_pace_min" placeholder="minutes" pattern="\d{1,2}" maxlength="2" class="small-input" required>
           <span>:</span>
